add replicas option
Signed-off-by: tchughesiv <tchughesiv@gmail.com>

--- a/config/envs/rhdm-authoring-ha.yaml
+++ b/config/envs/rhdm-authoring-ha.yaml
@@ -1,10 +1,10 @@
 console:
   persistentVolumeClaims:
     - metadata:
-        name: "{{.ApplicationName}}-{{.Console.Name}}-claim"
+        name: "[[.ApplicationName]]-[[.Console.Name]]-claim"
         labels:
-          app: "{{.ApplicationName}}"
-          application: "{{.ApplicationName}}"
+          app: "[[.ApplicationName]]"
+          application: "[[.ApplicationName]]"
       spec:
         accessModes:
           - ReadWriteMany
@@ -14,18 +14,16 @@ console:
 
   deploymentConfigs:
     - metadata:
-        name: "{{.ApplicationName}}-{{.Console.Name}}"
+        name: "[[.ApplicationName]]-[[.Console.Name]]"
       spec:
-        ## Replicas for Decision Central
-        replicas: 2
         template:
           metadata:
-            name: "{{.ApplicationName}}-{{.Console.Name}}"
+            name: "[[.ApplicationName]]-[[.Console.Name]]"
           spec:
             containers:
-              - name: "{{.ApplicationName}}-{{.Console.Name}}"
+              - name: "[[.ApplicationName]]-[[.Console.Name]]"
                 volumeMounts:
-                  - name: "{{.ApplicationName}}-{{.Console.Name}}-pvol"
+                  - name: "[[.ApplicationName]]-[[.Console.Name]]-pvol"
                     mountPath: "/opt/eap/standalone/data/kie"
                 ports:
                   - name: git-ssh
@@ -33,17 +31,17 @@ console:
                     protocol: TCP
                 env:
                   - name: APPFORMER_ELASTIC_HOST
-                    value: "{{.ApplicationName}}-{{.Product}}index"
+                    value: "[[.ApplicationName]]-[[.Product]]index"
                   - name: APPFORMER_JMS_BROKER_ADDRESS
-                    value: "{{.ApplicationName}}-amq-tcp"
+                    value: "[[.ApplicationName]]-amq-tcp"
                   - name: APPFORMER_JMS_BROKER_USER
                     value: "jmsBrokserUser"
                   - name: APPFORMER_JMS_BROKER_PASSWORD
-                    value: "{{.AdminPassword}}"
+                    value: "[[.AdminPassword]]"
             volumes:
-              - name: "{{.ApplicationName}}-{{.Console.Name}}-pvol"
+              - name: "[[.ApplicationName]]-[[.Console.Name]]-pvol"
                 persistentVolumeClaim:
-                  claimName: "{{.ApplicationName}}-{{.Console.Name}}-claim"
+                  claimName: "[[.ApplicationName]]-[[.Console.Name]]-claim"
 
   services:
     - spec:
@@ -52,7 +50,7 @@ console:
             port: 8001
             targetPort: 8001
       metadata:
-        name: "{{.ApplicationName}}-{{.Console.Name}}"
+        name: "[[.ApplicationName]]-[[.Console.Name]]"
 
 ## KIE smartrouter BEGIN
 smartRouter:
@@ -62,10 +60,10 @@ smartRouter:
 others:
   - persistentVolumeClaims:
       - metadata:
-          name: "{{.ApplicationName}}-{{.Product}}index-claim"
+          name: "[[.ApplicationName]]-[[.Product]]index-claim"
           labels:
-            app: "{{.ApplicationName}}"
-            application: "{{.ApplicationName}}"
+            app: "[[.ApplicationName]]"
+            application: "[[.ApplicationName]]"
         spec:
           accessModes:
             - ReadWriteOnce
@@ -75,11 +73,11 @@ others:
 
     deploymentConfigs:
       - metadata:
-          name: "{{.ApplicationName}}-{{.Product}}index"
+          name: "[[.ApplicationName]]-[[.Product]]index"
           labels:
-            app: "{{.ApplicationName}}"
-            application: "{{.ApplicationName}}"
-            service: "{{.ApplicationName}}-{{.Product}}index"
+            app: "[[.ApplicationName]]"
+            application: "[[.ApplicationName]]"
+            service: "[[.ApplicationName]]-[[.Product]]index"
         spec:
           strategy:
             type: Recreate
@@ -88,30 +86,30 @@ others:
               imageChangeParams:
                 automatic: true
                 containerNames:
-                  - "{{.ApplicationName}}-{{.Product}}index"
+                  - "[[.ApplicationName]]-[[.Product]]index"
                 from:
                   kind: ImageStreamTag
                   namespace: "openshift"
-                  name: "{{.Product}}{{.Version}}-{{.Console.ImageName}}-indexing-openshift:{{.ImageTag}}"
+                  name: "[[.Product]][[.Version]]-[[.Console.ImageName]]-indexing-openshift:[[.ImageTag]]"
             - type: ConfigChange
           replicas: 1
           selector:
-            deploymentConfig: "{{.ApplicationName}}-{{.Product}}index"
+            deploymentConfig: "[[.ApplicationName]]-[[.Product]]index"
           template:
             metadata:
-              name: "{{.ApplicationName}}-{{.Product}}index"
+              name: "[[.ApplicationName]]-[[.Product]]index"
               labels:
-                deploymentConfig: "{{.ApplicationName}}-{{.Product}}index"
-                app: "{{.ApplicationName}}"
-                application: "{{.ApplicationName}}"
+                deploymentConfig: "[[.ApplicationName]]-[[.Product]]index"
+                app: "[[.ApplicationName]]"
+                application: "[[.ApplicationName]]"
             spec:
               terminationGracePeriodSeconds: 60
               containers:
-                - name: "{{.ApplicationName}}-{{.Product}}index"
-                  image: "{{.Product}}{{.Version}}-{{.Console.ImageName}}-indexing-openshift"
+                - name: "[[.ApplicationName]]-[[.Product]]index"
+                  image: "[[.Product]][[.Version]]-[[.Console.ImageName]]-indexing-openshift"
                   imagePullPolicy: Always
                   volumeMounts:
-                    - name: "{{.ApplicationName}}-{{.Product}}index-pvol"
+                    - name: "[[.ApplicationName]]-[[.Product]]index-pvol"
                       mountPath: "/opt/elasticsearch/data"
                   livenessProbe:
                     tcpSocket:
@@ -133,19 +131,19 @@ others:
                       containerPort: 9200
                       protocol: TCP
               volumes:
-                - name: "{{.ApplicationName}}-{{.Product}}index-pvol"
+                - name: "[[.ApplicationName]]-[[.Product]]index-pvol"
                   persistentVolumeClaim:
-                    claimName: "{{.ApplicationName}}-{{.Product}}index-claim"
+                    claimName: "[[.ApplicationName]]-[[.Product]]index-claim"
 
       - metadata:
           labels:
-            app: "{{.ApplicationName}}"
-            application: "{{.ApplicationName}}"
-          name: "{{.ApplicationName}}-amq"
+            app: "[[.ApplicationName]]"
+            application: "[[.ApplicationName]]"
+          name: "[[.ApplicationName]]-amq"
         spec:
           replicas: 1
           selector:
-            deploymentConfig: "{{.ApplicationName}}-amq"
+            deploymentConfig: "[[.ApplicationName]]-amq"
           strategy:
             rollingParams:
               maxSurge: 0
@@ -153,17 +151,17 @@ others:
           template:
             metadata:
               labels:
-                app: "{{.ApplicationName}}"
-                application: "{{.ApplicationName}}"
-                deploymentConfig: "{{.ApplicationName}}-amq"
-              name: "{{.ApplicationName}}-amq"
+                app: "[[.ApplicationName]]"
+                application: "[[.ApplicationName]]"
+                deploymentConfig: "[[.ApplicationName]]-amq"
+              name: "[[.ApplicationName]]-amq"
             spec:
               containers:
                 - env:
                     - name: AMQ_USER
                       value: "jmsBrokserUser"
                     - name: AMQ_PASSWORD
-                      value: "{{.AdminPassword}}"
+                      value: "[[.AdminPassword]]"
                     - name: AMQ_ROLE
                       value: admin
                     - name: AMQ_NAME
@@ -185,7 +183,7 @@ others:
                       exec:
                         command:
                           - /opt/amq/bin/shutdownHook.sh
-                  name: "{{.ApplicationName}}-amq"
+                  name: "[[.ApplicationName]]-amq"
                   ports:
                     - containerPort: 8161
                       name: jolokia
@@ -207,7 +205,7 @@ others:
             - imageChangeParams:
                 automatic: true
                 containerNames:
-                  - "{{.ApplicationName}}-amq"
+                  - "[[.ApplicationName]]-amq"
                 from:
                   kind: ImageStreamTag
                   namespace: "openshift"
@@ -221,13 +219,13 @@ others:
             - port: 61616
               targetPort: 61616
           selector:
-            deploymentConfig: "{{.ApplicationName}}-amq"
+            deploymentConfig: "[[.ApplicationName]]-amq"
         metadata:
-          name: "{{.ApplicationName}}-amq-tcp"
+          name: "[[.ApplicationName]]-amq-tcp"
           labels:
-            app: "{{.ApplicationName}}"
-            application: "{{.ApplicationName}}"
-            service: "{{.ApplicationName}}-amq"
+            app: "[[.ApplicationName]]"
+            application: "[[.ApplicationName]]"
+            service: "[[.ApplicationName]]-amq"
           annotations:
             description: The broker's OpenWire port.
 
@@ -240,45 +238,29 @@ others:
               port: 9300
               targetPort: 9300
           selector:
-            deploymentConfig: "{{.ApplicationName}}-{{.Product}}index"
+            deploymentConfig: "[[.ApplicationName]]-[[.Product]]index"
         metadata:
-          name: "{{.ApplicationName}}-{{.Product}}index"
+          name: "[[.ApplicationName]]-[[.Product]]index"
           labels:
-            app: "{{.ApplicationName}}"
-            application: "{{.ApplicationName}}"
-            service: "{{.ApplicationName}}-{{.Product}}index"
+            app: "[[.ApplicationName]]"
+            application: "[[.ApplicationName]]"
+            service: "[[.ApplicationName]]-[[.Product]]index"
           annotations:
             description: All the Decision Central Indexing Elasticsearch ports.
 
     routes:
-      - id: "{{.ApplicationName}}-{{.Product}}index-http"
+      - id: "[[.ApplicationName]]-[[.Product]]index-http"
         metadata:
-          name: "{{.ApplicationName}}-{{.Product}}index"
+          name: "[[.ApplicationName]]-[[.Product]]index"
           labels:
-            app: "{{.ApplicationName}}"
-            application: "{{.ApplicationName}}"
+            app: "[[.ApplicationName]]"
+            application: "[[.ApplicationName]]"
           annotations:
             description: Route for Decision Central Indexing's Elasticsearch http service.
         spec:
           host: ""
           to:
-            name: "{{.ApplicationName}}-{{.Product}}index"
+            name: "[[.ApplicationName]]-[[.Product]]index"
           port:
             targetPort: rest
-
 ## ES/AMQ END
-
-## KIE Servers BEGIN
-servers:
-  ## RANGE BEGINS
-  #{{ range $index, $Map := .Servers }}
-  ## KIE server deployment config BEGIN
-  - deploymentConfigs:
-      - metadata:
-          name: "{{.KieName}}{{.KieIndex}}"
-        spec:
-          replicas: 2
-  ## KIE server deployment config END
-  #{{end}}
-  ## RANGE ends
-## KIE Servers END
