--- a/deploy/crds/kieapp.crd.yaml
+++ b/deploy/crds/kieapp.crd.yaml
@@ -43,6 +43,10 @@ spec:
                   type: object
                   description: Configuration of the RHPAM workbench
                   properties:
+                    replicas:
+                      type: integer
+                      format: int32
+                      description: Replicas to set for the DeploymentConfig
                     keystoreSecret:
                       type: string
                       description: Keystore secret name
@@ -106,6 +110,10 @@ spec:
                         type: integer
                         format: int
                         description: Number of Server sets that will be deployed
+                      replicas:
+                        type: integer
+                        format: int32
+                        description: Replicas to set for the DeploymentConfig
                       keystoreSecret:
                         type: string
                         description: Keystore secret name
@@ -243,6 +251,10 @@ spec:
                   type: object
                   description: Configuration of the RHPAM smart router
                   properties:
+                    replicas:
+                      type: integer
+                      format: int32
+                      description: Replicas to set for the DeploymentConfig
                     keystoreSecret:
                       type: string
                       description: Keystore secret name
