--- a/config/envs/rhpam-production-immutable.yaml
+++ b/config/envs/rhpam-production-immutable.yaml
@@ -5,15 +5,15 @@ smartRouter:
 ## KIE Servers BEGIN
 servers:
   ## RANGE BEGINS
-  #{{ range $index, $Map := .Servers }}
+  #[[ range $index, $Map := .Servers ]]
   ## PostgreSQL persistent volume claim BEGIN
   - persistentVolumeClaims:
       - metadata:
-          name: "{{.KieName}}{{.KieIndex}}-postgresql-claim"
+          name: "[[.KieName]][[.KieIndex]]-postgresql-claim"
           labels:
-            app: "{{$.ApplicationName}}"
-            application: "{{$.ApplicationName}}"
-            service: "{{.KieName}}{{.KieIndex}}-postgresql"
+            app: "[[$.ApplicationName]]"
+            application: "[[$.ApplicationName]]"
+            service: "[[.KieName]][[.KieIndex]]-postgresql"
         spec:
           accessModes:
             - ReadWriteOnce
@@ -22,86 +22,85 @@ servers:
               storage: "1Gi"
     ## PostgreSQL persistent volume claim END
     ## KIE server build config BEGIN
-    #{{if .Build.KieServerContainerDeployment}}
+    #[[if .Build.KieServerContainerDeployment]]
     imageStreams:
       - metadata:
-          name: "{{.KieName}}{{.KieIndex}}"
+          name: "[[.KieName]][[.KieIndex]]"
           labels:
-            app: "{{$.ApplicationName}}"
-            application: "{{$.ApplicationName}}"
-            service: "{{.KieName}}{{.KieIndex}}"
+            app: "[[$.ApplicationName]]"
+            application: "[[$.ApplicationName]]"
+            service: "[[.KieName]][[.KieIndex]]"
     buildConfigs:
       - metadata:
-          name: "{{.KieName}}{{.KieIndex}}"
+          name: "[[.KieName]][[.KieIndex]]"
           labels:
-            app: "{{$.ApplicationName}}"
-            application: "{{$.ApplicationName}}"
-            service: "{{.KieName}}{{.KieIndex}}"
+            app: "[[$.ApplicationName]]"
+            application: "[[$.ApplicationName]]"
+            service: "[[.KieName]][[.KieIndex]]"
         spec:
           source:
             type: Git
             git:
-              uri: "{{.Build.GitSource.URI}}"
-              ref: "{{.Build.GitSource.Reference}}"
-            contextDir: "{{.Build.GitSource.ContextDir}}"
+              uri: "[[.Build.GitSource.URI]]"
+              ref: "[[.Build.GitSource.Reference]]"
+            contextDir: "[[.Build.GitSource.ContextDir]]"
           strategy:
             type: Source
             sourceStrategy:
               env:
                 - name: KIE_SERVER_CONTAINER_DEPLOYMENT
-                  value: "{{.Build.KieServerContainerDeployment}}"
+                  value: "[[.Build.KieServerContainerDeployment]]"
                 - name: MAVEN_MIRROR_URL
-                  value: "{{.Build.MavenMirrorURL}}"
+                  value: "[[.Build.MavenMirrorURL]]"
                 - name: ARTIFACT_DIR
-                  value: "{{.Build.ArtifactDir}}"
+                  value: "[[.Build.ArtifactDir]]"
               forcePull: true
               from:
-                kind: "{{.Build.From.Kind}}"
-                namespace: "{{.Build.From.Namespace}}"
-                name: "{{.Build.From.Name}}"
+                kind: "[[.Build.From.Kind]]"
+                namespace: "[[.Build.From.Namespace]]"
+                name: "[[.Build.From.Name]]"
           output:
             to:
               kind: ImageStreamTag
-              name: "{{.KieName}}{{.KieIndex}}:latest"
+              name: "[[.KieName]][[.KieIndex]]:latest"
           triggers:
             - type: GitHub
               github:
-                secret: "{{.Build.GitHubWebhookSecret}}"
+                secret: "[[.Build.GitHubWebhookSecret]]"
             - type: Generic
               generic:
-                secret: "{{.Build.GenericWebhookSecret}}"
+                secret: "[[.Build.GenericWebhookSecret]]"
             - type: ImageChange
               imageChange: {}
             - type: ConfigChange
-    #{{end}}
+    #[[end]]
     ## KIE server build config END
     ## KIE server deployment config BEGIN
     deploymentConfigs:
       - metadata:
-          name: "{{.KieName}}{{.KieIndex}}"
+          name: "[[.KieName]][[.KieIndex]]"
           labels:
-            app: "{{$.ApplicationName}}"
-            application: "{{$.ApplicationName}}"
-            service: "{{.KieName}}{{.KieIndex}}"
+            app: "[[$.ApplicationName]]"
+            application: "[[$.ApplicationName]]"
+            service: "[[.KieName]][[.KieIndex]]"
         spec:
-          replicas: 2
           template:
             spec:
               containers:
-                - name: "{{.KieName}}{{.KieIndex}}"
-                  image: "{{.KieName}}{{.KieIndex}}"
+                - name: "[[.KieName]][[.KieIndex]]"
+                  image: "[[.KieName]][[.KieIndex]]"
                   env:
                     - name: KIE_SERVER_CONTAINER_DEPLOYMENT
-                      value: "{{.Build.KieServerContainerDeployment}}"
+                      value: "[[.Build.KieServerContainerDeployment]]"
                     - name: KIE_SERVER_MGMT_DISABLED
                       value: "true"
                     - name: KIE_SERVER_STARTUP_STRATEGY
                       value: LocalContainersStartupStrategy
-                    - name: "{{$.MavenRepo}}_MAVEN_REPO_USERNAME"
+                    - name: "[[$.MavenRepo]]_MAVEN_REPO_USERNAME"
                       value: ""
-                    - name: "{{$.MavenRepo}}_MAVEN_REPO_PASSWORD"
+                    - name: "[[$.MavenRepo]]_MAVEN_REPO_PASSWORD"
                       value: ""
-                    - name: "{{$.MavenRepo}}_MAVEN_REPO_SERVICE"
+                    - name: "[[$.MavenRepo]]_MAVEN_REPO_SERVICE"
                       value: ""
                     - name: MAVEN_REPOS
                       value: "EXTERNAL"
@@ -125,9 +124,9 @@ servers:
                     - name: RHPAM_USERNAME
                       value: "rhpam"
                     - name: RHPAM_PASSWORD
-                      value: "{{$.AdminPassword}}"
+                      value: "[[$.AdminPassword]]"
                     - name: RHPAM_SERVICE_HOST
-                      value: "{{.KieName}}{{.KieIndex}}-postgresql"
+                      value: "[[.KieName]][[.KieIndex]]-postgresql"
                     - name: RHPAM_SERVICE_PORT
                       value: "5432"
                     - name: TIMER_SERVICE_DATA_STORE_REFRESH_INTERVAL
@@ -136,11 +135,11 @@ servers:
       ## KIE server deployment config END
       ## PostgreSQL deployment config BEGIN
       - metadata:
-          name: "{{.KieName}}{{.KieIndex}}-postgresql"
+          name: "[[.KieName]][[.KieIndex]]-postgresql"
           labels:
-            app: "{{$.ApplicationName}}"
-            application: "{{$.ApplicationName}}"
-            service: "{{.KieName}}{{.KieIndex}}-postgresql"
+            app: "[[$.ApplicationName]]"
+            application: "[[$.ApplicationName]]"
+            service: "[[.KieName]][[.KieIndex]]-postgresql"
         spec:
           strategy:
             type: Recreate
@@ -149,7 +148,7 @@ servers:
               imageChangeParams:
                 automatic: true
                 containerNames:
-                  - "{{.KieName}}-postgresql"
+                  - "[[.KieName]]-postgresql"
                 from:
                   kind: ImageStreamTag
                   namespace: "openshift"
@@ -157,18 +156,18 @@ servers:
             - type: ConfigChange
           replicas: 1
           selector:
-            deploymentConfig: "{{.KieName}}{{.KieIndex}}-postgresql"
+            deploymentConfig: "[[.KieName]][[.KieIndex]]-postgresql"
           template:
             metadata:
-              name: "{{.KieName}}{{.KieIndex}}-postgresql"
+              name: "[[.KieName]][[.KieIndex]]-postgresql"
               labels:
-                deploymentConfig: "{{.KieName}}{{.KieIndex}}-postgresql"
-                app: "{{$.ApplicationName}}"
-                application: "{{$.ApplicationName}}"
-                service: "{{.KieName}}{{.KieIndex}}-postgresql"
+                deploymentConfig: "[[.KieName]][[.KieIndex]]-postgresql"
+                app: "[[$.ApplicationName]]"
+                application: "[[$.ApplicationName]]"
+                service: "[[.KieName]][[.KieIndex]]-postgresql"
             spec:
               containers:
-                - name: "{{.KieName}}-postgresql"
+                - name: "[[.KieName]]-postgresql"
                   image: postgresql
                   imagePullPolicy: IfNotPresent
                   livenessProbe:
@@ -189,20 +188,20 @@ servers:
                       protocol: TCP
                   volumeMounts:
                     - mountPath: "/var/lib/pgsql/data"
-                      name: "{{.KieName}}-postgresql-pvol"
+                      name: "[[.KieName]]-postgresql-pvol"
                   env:
                     - name: POSTGRESQL_USER
                       value: "rhpam"
                     - name: POSTGRESQL_PASSWORD
-                      value: "{{$.AdminPassword}}"
+                      value: "[[$.AdminPassword]]"
                     - name: POSTGRESQL_DATABASE
                       value: "rhpam7"
                     - name: POSTGRESQL_MAX_PREPARED_TRANSACTIONS
                       value: "100"
               volumes:
-                - name: "{{.KieName}}-postgresql-pvol"
+                - name: "[[.KieName]]-postgresql-pvol"
                   persistentVolumeClaim:
-                    claimName: "{{.KieName}}{{.KieIndex}}-postgresql-claim"
+                    claimName: "[[.KieName]][[.KieIndex]]-postgresql-claim"
     ## PostgreSQL deployment config END
     services:
       ## PostgreSQL service BEGIN
@@ -211,15 +210,15 @@ servers:
             description: The database server's port.
           labels:
             application: prod
-            service: "{{.KieName}}{{.KieIndex}}-postgresql"
-          name: "{{.KieName}}{{.KieIndex}}-postgresql"
+            service: "[[.KieName]][[.KieIndex]]-postgresql"
+          name: "[[.KieName]][[.KieIndex]]-postgresql"
         spec:
           ports:
             - port: 5432
               targetPort: 5432
           selector:
-            deploymentConfig: "{{.KieName}}{{.KieIndex}}-postgresql"
+            deploymentConfig: "[[.KieName]][[.KieIndex]]-postgresql"
     ## PostgreSQL service END
-#{{end}}
+#[[end]]
 ## RANGE ends
 ## KIE Servers END
